--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+Videos/Kat Dahlia - I think Im In Love  En Español.mp4
+Audios/Kat Dahlia - I think Im In Love  En Español.mp4
